generated/dashboard/glance.Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: glance
  name: glance
  namespace: dashboard
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    name: glance
