generated/dashboard/gateway.networking.k8s.io-v1.HTTPRoute-headlamp.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: dashboard
spec:
  hostnames:
  - k8s.o5s.lol
  parentRefs:
  - name: traefik-gateway
    namespace: network
  rules:
  - backendRefs:
    - name: headlamp
      port: 80
    matches:
    - path:
        value: /
