generated/dashboard/glance.HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: glance
  namespace: dashboard
spec:
  hostnames:
  - o5s.lol
  parentRefs:
  - name: nginx-gateway
    namespace: network
  rules:
  - backendRefs:
    - name: glance
      port: 8080
    matches:
    - path:
        value: /
